Updated Dependencies Migration to JUnit5